# sds-library

./: .gitignore  AI_CONTEXT.md  CHANGELOG.md  CMakeLists.txt  DESIGN.md  Doxyfile  README.md  TESTING.md  library.json  pyproject.toml  run_tests.sh  schema.sds
.github/workflows/: fuzz.yml  python-wheels.yml  sanitizers.yml
Formula/: sds.rb
codegen/: __init__.py  __main__.py  c_generator.py  cli.py  parser.py  python_generator.py
docs/html/: annotated.html  annotated_dup.js  class_s_d_s_client.html  class_s_d_s_client.js  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen.css  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  group__arduino.html  group__arduino.js  group__callbacks.html  group__callbacks.js  group__config.html  group__config.js  group__event__callbacks.html  group__event__callbacks.js  group__init.html  group__init.js  group__owner__helpers.html  group__owner__helpers.js  group__registration.html  group__registration.js  group__registry.html  group__registry.js  group__serialization.html  group__serialization.js  group__types.html  group__types.js  index.html  (+37 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1d.js  all_1f.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+50 more)
examples/esp32_sensor/: config.h.example  esp32_sensor.ino  platformio.ini  sds.h  sds_core.c  sds_error.h  sds_json.c  sds_json.h  sds_platform.h  sds_platform_esp32.cpp  sds_types.h
examples/hybrid_demo/: README.md  generate.sh  schema.sds
examples/hybrid_demo/c_device/: main.c
examples/hybrid_demo/c_owner/: Makefile  main.c
examples/hybrid_demo/esp32_device/: .gitignore  config.h.example  esp32_device.ino  platformio.ini
examples/hybrid_demo/linux_device/: Makefile
examples/hybrid_demo/python_device/: device.py
examples/hybrid_demo/python_owner/: owner.py
examples/linux_owner/: main.c
examples/python/: README.md  simple_device.py  simple_owner.py
improvements/: CALLBACK_USERDATA_PLAN.md  CRITICAL_ISSUES.md  LIVENESS_DESIGN.md  PRODUCTION_READINESS.md  PYTHON_WRAPPER_PLAN.md  SDS_0.5.0_DESIGN.md  SDS_0.5.0_IMPL_PLAN.md  TEST_COVERAGE_PLAN.md
include/: sds.h  sds_error.h  sds_json.h  sds_platform.h  sds_types.h
packaging/: build-package.sh
packaging/common/: sds-codegen
packaging/debian/: changelog  control  copyright  rules  sds-dev.install  sds.install
packaging/homebrew/: sds.rb
platform/esp32/: sds_platform_esp32.cpp
platform/posix/: sds_platform_posix.c
python/: MANIFEST.in  README.md  pyproject.toml  sds_types.py  setup.py
python/sds/: __init__.py  _bindings.py  _build_ffi.py  _cdefs.h  _logging.py  node.py  table.py  tables.py  types.py
python/tests/: conftest.py  test_concurrent.py  test_eviction.py  test_imports.py  test_node.py  test_signed_integers.py  test_table.py  test_types.py
scripts/: run_fuzz.sh  run_sanitizers.sh
src/: sds.cpp  sds_core.c  sds_json.c
tests/: test_basic.c  test_buffer_overflow.c  test_concurrent.c  test_delta_sync.c  test_errors.c  test_generated.c  test_json.c  test_liveness.c  test_multi_node.c  test_reconnection.c  test_simple_api.c  test_unit_core.c  test_utilities.c
tests/fuzz/: fuzz_json_parser.c  fuzz_mqtt_message.c
tests/fuzz/corpus/json/: escaped  nested  numbers  simple_object
tests/fuzz/corpus/mqtt/: empty_json  malformed  valid_config  valid_state
tests/mock/: sds_platform_mock.c  sds_platform_mock.h
tests/scale/: run_scale_test.sh  test_scale_device.c  test_scale_owner.c
tools/: sds_codegen.py
