[build-system]
requires = ["setuptools>=45", "wheel", "cffi>=1.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sds-library"
version = "1.0.0"
description = "Python bindings for the SDS (Synchronized Data Structures) library"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "SDS Team"}
]
keywords = ["iot", "mqtt", "embedded", "synchronization", "dds"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]
dependencies = [
    "cffi>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "mypy",
    "black",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/your-org/sds-library"
Documentation = "https://github.com/your-org/sds-library#readme"
Repository = "https://github.com/your-org/sds-library"

[tool.setuptools]
packages = ["sds"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
sds = ["*.h", "*.so", "*.dylib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "C4"]
ignore = ["E501"]

[tool.cibuildwheel]
build = ["cp38-*", "cp39-*", "cp310-*", "cp311-*", "cp312-*"]
skip = ["*-musllinux_*", "*-win32", "*-manylinux_i686"]

[tool.cibuildwheel.linux]
before-all = "yum install -y mosquitto-devel || apt-get update && apt-get install -y libmosquitto-dev"

[tool.cibuildwheel.macos]
before-all = "brew install mosquitto"
